<resources>
    <string name="app_name">Culturapp</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Favoritos</string>
    <string name="title_notifications">Alarmas</string>
    <string name="hint_custom_edittext">Ingrese el valor</string>
    <string name="inicio">Inicio</string>
    <string name="alertas">Alertas</string>
    <string name="favoritos">Favoritos</string>

    <!--    alarms-->
    <string name="add_alarm">Agregar alarma</string>
    <string name="delete_favorite">Quitar de favoritos</string>
    <string name="edit_alarm">Editar alarma</string>
    <string name="delete_alarm">Quitar alarma</string>

    <!--    events-->
    <string name="hint_titulo">Título</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_hora">Hora</string>
    <string name="hint_lugar">Lugar</string>
    <string name="hint_contacto">Contacto</string>
    <string name="hint_telefono_contacto">Teléfono de contacto</string>

    <string name="edit_event">Ver y Editar Evento</string>
    <string name="delete_event">Eliminar Evento</string>

    <string name="login">Iniciar sesión</string>
    <string name="forget_password">Recuperar \ncontraseña</string>
    <string name="register">Registro</string>
    <string name="txt_forget_password">¿Olvidaste \ntu \ncontraseña?</string>
    <string name="txt_register">¿No tienes Cuenta? Regístrate</string>
    <string name="login_google">Accede con Google</string>
    <string name="forget_instruction">Introduce tu Email para restablecer \ntu contraseña. Enviaremos un \ncódigo de seguridad.</string>
    <string name="register_instruction">Ingresa la información \npara acceder a la aplicación</string>
    <string name="next">Siguiente</string>
    <string name="back">Volver</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="call">Llamar</string>
    <string name="favorite_add">Marcar favorito</string>
    <string name="notification_add">Agregar alarma</string>
    <string name="description_event">Ya está a la venta la boletería para la ida de la tercera fase de la Conmebol Libertadores 2020, el Atlético Independiente Antioquia se medirá a River Juniors este martes 182de enero a partir de las 7:00 de la noche en el máximo escenario de los antioqueños</string>


    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_confirm">Confirme Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_celular">Número celular</string>
    <string name="hint_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="terminos_y_condiciones">He leído y acepto los</string>
    <string name="terminos_y_condiciones2">Términos y condiciones</string>
    <string name="terminos_y_condiciones3">El usuario se compromete a leer los términos y condiciones aquí establecidas, previamente a la descarga de la aplicación, por tanto, en caso de realizar la instalación se entiende que cuenta con el conocimiento integral de este documento y la consecuente aceptación de la totalidad de sus estipulaciones.El Usuario reconoce que el ingreso de su información personal, y los datos que contiene la aplicación a su disposición respecto a los productos activos de la Universidad, la realizan de manera voluntaria, quienes optan por acceder a esta aplicación en Colombia o desde fuera del territorio nacional, lo hacen por iniciativa propia y son responsables del cumplimiento de las leyes locales, en la medida en que dichas leyes sean aplicables en su correspondiente país. En caso de que se acceda por parte de menores de edad, deben contar con la supervisión de un adulto en todo momento desde la descarga y durante el uso de la aplicación, en el evento en que no se cumpla esta condición, le agradecemos no hacer uso de la aplicación.</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta? \n Inicia sesión</string>
    <string name="finalizar">Finalizar</string>
    <string name="hint_codigo">Código</string>
    <string name="guardar">GUARDAR</string>

    <!--    profile_copy-->
    <string name="title_profile">Perfil</string>

    <!--    user-->
    <string name="hint_user_name">User</string>
    <string name="hint_user_lastname">Apellido</string>
    <string name="hint_role">Administrador</string>
    <string name="hint_cellphone">300 400 00 00</string>
    <string name="email">prueba@prueba.com</string>
    <string name="hint_birth_date">DD/MM/YYYY</string>
    <string name="hint_password">Perfil</string>
    <string name="hint_state">Activo</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="administrar_eventos">Administrar Eventos</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="splash_description">¡Están sucediendo muchas cosas a tu alrededor! ¡Nuestra misión es proporcionar los Eventos que suceden en la ciudad!</string>
    <string name="loading">Cargando</string>
    <string name="result_not_found">No se encontraron resultados</string>
    <string name="event_saved">Evento guardado</string>
    <string name="unexpected_error">Ha ocurrido un error inesperado</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="recovery_password_legend">Para finalizar crea una nueva \ncontraseña de acceso. \n</string>
    <string name="recovery_password_legend_2">Hemos enviado un código de \nseguridad a tu correo electrónico. \nIngresa el código de seguridad</string>
    <string name="register_legend">Ingresa la información \npersonal</string>
    <string name="menu">Menu</string>

    <!--    terms and conditions -->
    <string name="title_terms">Términos y condiciones</string>
    <string name="text_terms">En este documento se establecen los Términos y Condiciones que regulan el uso de la aplicación móvil de la Universidad Nacional Abierta y a Distancia titulada CulturApp.</string>
    <string name="text_terms2">
        Al acceder a la aplicación y explorar el contenido del mismo, Usted acepta, sin reserva
        ni limitación alguna, los presentes términos y condiciones.</string>
</resources>
