<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#FFFFFF">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio"
        app:cnb_backgroundColor="@color/backgroundWindow"
        app:cnb_iconColor="@color/colorAccent" />

    <item
        android:id="@+id/alarm"
        android:icon="@drawable/ic_alarms_menu"
        android:title="@string/alertas"
        app:cnb_backgroundColor="@color/backgroundWindow"
        app:cnb_iconColor="@color/colorAccent" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorites_menu"
        android:title="@string/favoritos"
        app:cnb_backgroundColor="@color/backgroundWindow"
        app:cnb_iconColor="@color/colorAccent" />

</menu>