<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWindow"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="499dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="69dp">

        <RelativeLayout
            android:layout_width="289dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/logo"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/muli_bold"
                android:orientation="horizontal"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_item_dash_list"
            android:fontFamily="@font/muli_bold"
            android:orientation="horizontal"
            android:padding="12dp"
            android:text="@string/forget_instruction"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textForgetPassword" />

        <com.culturapp.culturapp.controls.CustomEditText
            android:id="@+id/editTextForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="24dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/round_yellow_button"
            android:fontFamily="@font/muli_bold"
            android:padding="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <Button
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_item_dash_list"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>