<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWindow">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_item_dash_list"
        android:drawableLeft="@drawable/ic_user"
        android:fontFamily="@font/muli_bold"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/login"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_item_dash_list"
        android:drawableLeft="@drawable/ic_user"
        android:fontFamily="@font/muli_bold"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/mi_perfil"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnEvents"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_item_dash_list"
        android:drawableLeft="@drawable/ic_admin_event"
        android:fontFamily="@font/muli_bold"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/administrar_eventos"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProfile" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="133dp"
        android:background="@drawable/rounded_item_dash_list"
        android:drawableLeft="@drawable/ic_logout"
        android:fontFamily="@font/muli_bold"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/logout"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:drawablePadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:paddingLeft="7dp"
        android:drawableStart="@drawable/ic_close"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>