<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWindow"
    android:paddingHorizontal="55dp"
    android:paddingVertical="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:fontFamily="@font/muli_bold"
        android:orientation="horizontal"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_info_legend"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        android:text="Ingresa la información \npersonal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_anchor="@+id/imageLogo"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <com.culturapp.culturapp.controls.CustomEditText
        android:id="@+id/editTextNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegister" />

    <com.culturapp.culturapp.controls.CustomEditText
        android:id="@+id/editTextApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombres" />


    <com.culturapp.culturapp.controls.CustomEditText
        android:id="@+id/editTextCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidos" />


    <com.culturapp.culturapp.controls.CustomEditText
        android:id="@+id/editTextFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCelular" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="24dp"
        android:background="@drawable/round_yellow_button"
        android:fontFamily="@font/muli_bold"
        android:padding="5dp"
        android:text="@string/finalizar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPrevious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/rounded_item_dash_list"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>