<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/backgroundWindow">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:src="@drawable/account_circle_white_18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/imgAvatar"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:id="@+id/layInfo">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/hint_user_name"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="13dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_person_white_18dp" />

                        <TextView
                            android:id="@+id/birthDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:fontFamily="@font/muli_regular"
                            android:textColor="@color/white"
                            android:text="@string/hint_role"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="13dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_email_white_18dp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:fontFamily="@font/muli_regular"
                            android:textColor="@color/white"
                            android:text="@string/email"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


    </LinearLayout>

    <include
        layout="@layout/profile_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</RelativeLayout>